Header: fixed content overflow

--- a/frontend/styles/site/common.less
+++ b/frontend/styles/site/common.less
@@ -225,7 +225,7 @@ body {
 
   &.with-social {
     > .row:not(.tablet):last-child, > .row:not(.mobile):last-child {
-      height: 30% !important;
+      height: 28% !important;
     }
 
     //- Without title and subtitle
@@ -237,7 +237,7 @@ body {
         height: 0%;
 
         &.logo {
-          height: 60%;
+          height: 62%;
         }
       }
     }
